fixing, create room
