# cmd/main.go
@@ -47,13 +47,16 @@ func main() {
 	route.POST("/reservations", routeApp.PostReservation)
 
 	// user
-	route.POST("/user", routeApp.PostUser)
-	route.POST("/user", routeApp.CreateUser)
-	route.GET("/user", routeApp.GetUser)
-	route.GET("/user/:id", routeApp.GetUserByID)
-	route.GET("/room", routeApp.GetRoom)
-	route.POST("/room", routeApp.CreateRoom)
-	route.POST("/room/:id/reservation", routeApp.CreateReservationForRoom)
+	route.GET("/users", routeApp.GetUsers)
+	route.GET("/users/:id", routeApp.GetUserByID)
+
+	// room
+	route.GET("/rooms", routeApp.GetRooms)
+	route.POST("/rooms", routeApp.CreateRoom)
+
+	// route.POST("/room/:id/reservation", routeApp.CreateReservationForRoom)
+
+	// snack
 	route.GET("/snack", routeApp.GetSnack)
 	route.POST("/snack", routeApp.CreateSnack)
 
